# particle-sim

./: CMakeLists.txt  README.md  glad.c  main.cu
include/glad/: glad.h
